corrected spacing errors and syntax errors

--- a/style.css
+++ b/style.css
@@ -1,14 +1,15 @@
 h1 {
-  background-color: blue;
-  background-color: green;
+  background-color: gray;
 }
 
 p {
   border: 5px solid black;
+
 }
  .page-content {
    background-color: red;
  }
-#unique-p-tag {
-  background-color: blue;
-}
+
+ ol {
+   float:
+ }
